tests/ui/parser/attr-before-eof.rs
fn main() {}

#[derive(Debug)] //~ERROR expected item after attributes

// ferrocene-annotations: fls_gvwd0kf72jt
// Attributes
